fix text mis-alignment

--- a/src/components/Home/Review/Review.module.css
+++ b/src/components/Home/Review/Review.module.css
@@ -16,7 +16,7 @@
   text-align: center;
 }
 
-.heading span {
+.heading .accent {
   color: var(--main-color);
 }
 
